# tp2-ROS2yGazebo

./: .devcontainer.json  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh  tp2-ros-gazebo.Dockerfile
scripts/: plot_ej5.py  plot_ej7.py
tp2/: package.xml  setup.py
tp2/config/: config_tp.rviz
tp2/launch/: tb3_simulation_launch.py
tp2/logs/: cuadrado.txt  log_ej5.txt  log_ej7_nn.txt  log_ej7_np.txt  log_ej7_pn.txt  log_ej7_pp.txt
tp2/tp2/: dump_odom.py  ej5.py  ej7_controller.py  ej8.py
tp2/world/: world_only.model
ws_tp2/src/tp2/: package.xml  setup.py
ws_tp2/src/tp2/launch/: tb3_simulation.launch.py
ws_tp2/src/tp2/logs/: log.txt  log_cir1.txt  log_cir2.txt  log_cir3.txt  log_cir4.txt  log_circular.txt
ws_tp2/src/tp2/scripts/: ejer5-plot_odom.py  ejer6-plot_odom_circular.py  ejer7-plot_odom_circular.py
ws_tp2/src/tp2/tp2/: ejer7_log_path_cirrcular.py  ejer8.py
ws_tp2/src/tp2/world/: world_only.model
